--- a/styles/scss/Globals.module.scss
+++ b/styles/scss/Globals.module.scss
@@ -309,3 +309,17 @@ html[data-theme="dark"] {
         }
     }
 }
+
+a,
+button {
+    -webkit-tap-highlight-color: transparent;
+    outline: none;
+}
+
+a:focus,
+a:active,
+button:focus,
+button:active {
+    outline: none;
+    background-color: transparent;
+}
